Fix code css wrapping and margins

--- a/noc_html/stylesheets/html.css
+++ b/noc_html/stylesheets/html.css
@@ -300,91 +300,6 @@ pre {
   border-left: none;
 }
 
-/* Div wrapper for code blocks */
-.code-block {
-  font-size: 90%;
-  line-height: 1.4em;
-  overflow: auto;
-  position: relative;
-}
-
-.code-comment-pair code pre {
-  width: 100%;
-}
-
-.one-line:first-child,
-.code-comment {
-  display: inline-block;
-  background-color: #eee;
-  padding: 4px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.one-line:first-child {
-  width: 60%;
-}
-
-.no-comment .one-line:first-child,
-.no-comment .code-comment {
-  background-color: transparent;
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
-.one-line {
-  padding-left: 4px;
-  /*width: 100%;*/
-}
-
-/* Wrapper for every pairing of code and comment.
-Used to catch the .code-comment-line inside of
-a relatively positioned parent. */
-.code-comment-pair {
-  display: block;
-  position: relative;
-  clear: both;
-  margin: 0 0 2px 0;
-  padding: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
-.code-comment-line {
-  border-top: 1px dashed #C7C7C7;
-  height: 2px;
-  left: 0;
-  overflow-y: auto;
-  position: absolute;
-  right: 0;
-  width: auto;
-}
-
-/* Div wrapper for code comments */
-.code-comment {
-  clear: right;
-  color: #444;
-  display: block;
-  float: right;
-  font-family: sans-serif;
-  font-style: bold;
-  margin-top: 0.0em;
-  position: relative;
-  width: 40%;
-  padding-left: 1.0em;
-
-  /* hack to remove 1px white space in Safari on Lion */
-  left: -1px;
-}
-
-/* The code goes in here. */
-.code-block code {
-  clear: left;
-  display: block;
-  position: relative;
-}
-
 .source-code textarea {
   background-color: #f0f0f0;
   display: none;
@@ -443,7 +358,7 @@ dt, dd {
 }
 
 dt {
- 	width:30%;	
+ 	width:30%;
 }
 
 dd {
