--- a/noc_pdf/stylesheets/print.css
+++ b/noc_pdf/stylesheets/print.css
@@ -238,7 +238,7 @@ _____________________________________________________________________________ */
 }
 
 .toc ul li {
-	
+
 }
 
 .toc ul li a {
@@ -495,7 +495,7 @@ dt, dd {
 }
 
 dt {
- 	width:30%;	
+ 	width:30%;
 }
 
 dd {
@@ -545,93 +545,6 @@ pre {
 .example .source-code,
 .tip .source-code {
   border-left: none;
-}
-
-/* Div wrapper for code blocks */
-.code-block {
-  font-size: 80%;
-  line-height: 1.4em;
-  overflow: auto;
-  position: relative;
-	margin: 2em 1em;
-}
-
-.code-comment-pair code pre {
-  width: 100%;
-}
-
-.one-line:first-child,
-.code-comment {
-  display: inline-block;
-  background-color: #eee;
-  padding: 4px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.one-line:first-child {
-  width: 60%;
-  margin-bottom: 3px;
-}
-
-.no-comment .one-line:first-child,
-.no-comment .code-comment {
-  background-color: transparent;
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
-.one-line {
-  padding-left: 4px;
-  /*width: 100%;*/
-}
-
-/* Wrapper for every pairing of code and comment.
-Used to catch the .code-comment-line inside of
-a relatively positioned parent. */
-.code-comment-pair {
-  display: block;
-  position: relative;
-  clear: both;
-  margin: 0 0 2px 0;
-  padding: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
-.code-comment-line {
-	border-top: 1px dashed #aaa;
-  height: 2px;
-  left: 0;
-  overflow-y: auto;
-  position: absolute;
-  right: 0;
-  width: auto;
-}
-
-/* Div wrapper for code comments */
-.code-comment {
-  clear: right;
-	color: #777;
-  display: block;
-  float: right;
-  font-family: sans-serif;
-  font-style: bold;
-  margin-top: 0.0em;
-  position: relative;
-  padding-left: 1.0em;
-  width: 40%;
-
-  /* hack to remove 1px white space in Safari on Lion */
-  left: -1px;
-}
-
-/* The code goes in here. */
-.code-block code {
-  clear: left;
-  display: block;
-  position: relative;
 }
 
 .source-code textarea {
